[tool.poetry]
name = "Athens"
version = "0.1.0"
description = ""
authors = ["Author Name <author@example.com>"]
# readme = "README.md"
# license = "BSD"
packages = [
  { include = "Athens" }
]

[tool.poetry.dependencies]
python = "^3.10"
fs = "^2.4.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"